retrieveUnpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Tipo_de_pcto_credito_de_vivienda_nueva__c</fullName>
        <label>Tipo de pcto crédito de vivienda nueva</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>Crédito de vivienda nueva</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_credito_de_vivienda_usada__c</fullName>
        <label>Tipo de pcto crédito de vivienda usada</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>Crédito de vivienda usada</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_cuenta_de_ahorros__c</fullName>
        <label>Tipo de pcto cuenta de ahorros</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>Cuenta de ahorros</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_leasing_vivienda_nueva__c</fullName>
        <label>Tipo de pcto leasing vivienda nueva</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>Leasing habitacional vivienda nueva</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_leasing_vivienda_usada__c</fullName>
        <label>Tipo de pcto leasing vivienda usada</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>Leasing habitacional vivienda usada</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_mejoramiento_de_vivienda__c</fullName>
        <label>Tipo de pcto mejoramiento de vivienda</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>Mejoramiento de vivienda</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_seguro_educativo__c</fullName>
        <description>Cuenta las oportunidades que tengan el tipo de producto seguro educativo</description>
        <label>Tipo de pcto seguro educativo</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>Seguro educativo</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_producto_que_le_interesa__c</fullName>
        <label>Tipo de producto que le interesa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crédito de vivienda nueva</fullName>
                </value>
                <value>
                    <fullName>Crédito de vivienda usada</fullName>
                </value>
                <value>
                    <fullName>Mejoramiento de vivienda</fullName>
                </value>
                <value>
                    <fullName>Asignación de cupo</fullName>
                </value>
                <value>
                    <fullName>Compra de cartera</fullName>
                </value>
                <value>
                    <fullName>Cuenta de ahorros</fullName>
                </value>
                <value>
                    <fullName>CDT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_registro_de_cuenta__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de registro de cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validar_nombre__c</fullName>
        <inlineHelpText>Indicar primer nombre</inlineHelpText>
        <label>Validar nombre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Convenios</fullName>
        <columns>Estado_de_aprobacion_Riesgos__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Tipo_de_documento__c</columns>
        <columns>Numero_de_documento__c</columns>
        <columns>Ciudad_de_residencia__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Convenio</value>
        </filters>
        <filters>
            <field>Solicitud_al_gerente_comercial__c</field>
            <operation>equals</operation>
            <value>Solicitud,Devuelta</value>
        </filters>
        <label>015.Convenios pendientes por aprobar</label>
    </listViews>
    <listViews>
        <fullName>Convenios_aprobados</fullName>
        <columns>Consecutivo__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Tipo_de_documento__c</columns>
        <columns>Numero_de_documento__c</columns>
        <columns>Ciudad_de_residencia__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Solicitud_al_gerente_comercial__c</field>
            <operation>equals</operation>
            <value>Aprobado</value>
        </filters>
        <label>014.Convenios aprobados</label>
    </listViews>
    <listViews>
        <fullName>Mis_clientes_con_mi_casa_YA</fullName>
        <columns>Numero_de_documento__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Numero_de_telefono_celular__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>Ciudad_de_residencia__c</columns>
        <columns>Propietario_de_la_cuenta__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Aprobado_con_programa_MI_CASA_YA__c</field>
            <operation>equals</operation>
            <value>Si</value>
        </filters>
        <label>008.Mis clientes con mi casa YA</label>
    </listViews>
    <listViews>
        <fullName>Mis_clientes_de_hoy</fullName>
        <columns>Numero_de_documento__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Numero_de_telefono_celular__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>001.Mis clientes de hoy</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Numero_de_documento__c</columns>
        <columns>Numero_de_telefono_celular__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>009.Mis Clientes / Convenios</label>
    </listViews>
    <listViews>
        <fullName>X004_Mis_clientes_de_este_mes</fullName>
        <columns>Numero_de_documento__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Numero_de_telefono_celular__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>005.Mis clientes de este mes</label>
    </listViews>
    <listViews>
        <fullName>X004_Mis_clientes_de_la_semana_pasada</fullName>
        <columns>Numero_de_documento__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Numero_de_telefono_celular__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>004.Mis clientes de la semana pasada</label>
    </listViews>
    <listViews>
        <fullName>X005_Mis_clientes_del_mes_pasado</fullName>
        <columns>Numero_de_documento__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Numero_de_telefono_celular__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>006.Mis clientes del mes pasado</label>
    </listViews>
    <listViews>
        <fullName>X011_Mis_convenios_aprobados</fullName>
        <columns>Consecutivo__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Tipo_de_documento__c</columns>
        <columns>Numero_de_documento__c</columns>
        <columns>Ciudad_de_residencia__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Solicitud_al_gerente_comercial__c</field>
            <operation>equals</operation>
            <value>Aprobado</value>
        </filters>
        <label>011.Mis convenios aprobados</label>
    </listViews>
    <listViews>
        <fullName>X012_Mis_convenios_pendientes_por_aprobar</fullName>
        <columns>Consecutivo__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Tipo_de_documento__c</columns>
        <columns>Numero_de_documento__c</columns>
        <columns>Ciudad_de_residencia__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Solicitud_al_gerente_comercial__c</field>
            <operation>equals</operation>
            <value>Solicitud</value>
        </filters>
        <label>012.Mis convenios pendientes por aprobar</label>
    </listViews>
    <listViews>
        <fullName>X013_Mis_convenios_devuelta</fullName>
        <columns>Consecutivo__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Tipo_de_documento__c</columns>
        <columns>Numero_de_documento__c</columns>
        <columns>Ciudad_de_residencia__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Solicitud_al_gerente_comercial__c</field>
            <operation>equals</operation>
            <value>Devuelta</value>
        </filters>
        <label>013.Mis convenios devuelta</label>
    </listViews>
    <listViews>
        <fullName>X2_Mis_clientes_de_ayer</fullName>
        <columns>Numero_de_documento__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Numero_de_telefono_celular__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>002.Mis clientes de ayer</label>
    </listViews>
    <listViews>
        <fullName>X2_Mis_clientes_de_esta_semana</fullName>
        <columns>Numero_de_documento__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Numero_de_telefono_celular__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>003.Mis clientes de  esta semana</label>
    </listViews>
    <listViews>
        <fullName>X6_Mis_clientes_del_a_o_pasado</fullName>
        <columns>Numero_de_documento__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Numero_de_telefono_celular__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>007.Mis clientes de este año</label>
    </listViews>
    <listViews>
        <fullName>X7_Mis_clientes_del_a_o_pasado</fullName>
        <columns>Numero_de_documento__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Numero_de_telefono_celular__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_YEAR</value>
        </filters>
        <label>007.Mis clientes del  año pasado</label>
    </listViews>
    <recordTypes>
        <fullName>Activacion_de_cuenta_personales</fullName>
        <active>true</active>
        <label>Activación de cuentas personales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cuenta</fullName>
        <active>true</active>
        <label>Cuenta</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CL001_Valida_check_list_convenio_per_nat</fullName>
        <active>true</active>
        <description>Valida el registro del check list de convenios para personas naturales</description>
        <errorConditionFormula>AND (  
 RecordType.Name = &quot;Convenio&quot;, 
 $Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
  ISPICKVAL (  Tipo__c , &quot;Natural&quot;),
  ISPICKVAL (  Fotocopia_Rut_persona_natural__c , &quot;No&quot;),
  ISPICKVAL (  Fotocopia_cedula_de_ciudadania__c , &quot;No&quot;),
  ISPICKVAL ( Convenio_firmado__c , &quot;No&quot;), 
  ISPICKVAL ( Referencias_comerciales__c , &quot;No&quot;)
)</errorConditionFormula>
        <errorMessage>CL-001 Para enviar la solicitud al Gerente Comercial, debe diligenciar el Check list de Persona Natural adicional a convenio firmado y referencias comerciales</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL002_Valida_check_list_convenio_per_jur</fullName>
        <active>true</active>
        <description>Valida que cuando el tipo registro se igual a Convenio, y el tipo sea igual a Jurídico, se deben diligenciar los campos del check list de convenios para personas jurídicas.</description>
        <errorConditionFormula>AND (  
 RecordType.Name = &quot;Convenio&quot;, 
 $Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
  ISPICKVAL (  Tipo__c , &quot;Jurídico&quot;),
  ISPICKVAL (  Fotocopia_Rut_persona_juridica__c , &quot;No&quot;),
  ISPICKVAL (  Fotocopia_cedula_representante_legal__c , &quot;No&quot;),
  ISPICKVAL (  Camara_de_comercio__c , &quot;No&quot;),
  ISPICKVAL ( Convenio_firmado__c , &quot;No&quot;), 
  ISPICKVAL ( Referencias_comerciales__c , &quot;No&quot;)
)</errorConditionFormula>
        <errorMessage>CL-002 Para enviar la solicitud al Gerente Comercial, debe diligenciar el Check list de Persona Jurídica, adicional a convenio firmado y referencias comerciales</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL003_Valida_campo_numero_de_documento</fullName>
        <active>true</active>
        <description>Valida que el campo número de documento sea solo número.</description>
        <errorConditionFormula>AND (
NOT ISNUMBER( Numero_de_documento__c ),
$Profile.Id &lt;&gt; &apos;00eo0000000uvB5&apos;
)</errorConditionFormula>
        <errorDisplayField>Numero_de_documento__c</errorDisplayField>
        <errorMessage>CL-003. Este campo solo acepta caracteres numéricos.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL004_Valida_campo_solicitud_al_gerente</fullName>
        <active>true</active>
        <description>Valida que solamente el gerente comercial apruebe o devuelva una solicitud.</description>
        <errorConditionFormula>AND ( 
$Profile.Name &lt;&gt; &quot;Gerente Comercial&quot;, 
 $Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,

OR ( 
ISPICKVAL (  Solicitud_al_gerente_comercial__c, &quot;Aprobada&quot;), 
ISPICKVAL (  Solicitud_al_gerente_comercial__c, &quot;Devuelta&quot;) 
))</errorConditionFormula>
        <errorDisplayField>Solicitud_al_gerente_comercial__c</errorDisplayField>
        <errorMessage>CL-004. Con su perfil no puede aprobar o devolver solicitudes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL005_El_celular_debe_tener_10_caractere</fullName>
        <active>true</active>
        <description>Valida que en el campo número de teléfono celular sea solamente numérico, y que contenga 10 caracteres.</description>
        <errorConditionFormula>AND( 
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;, 
$Profile.Id &lt;&gt; &quot;00eo00000013vGj&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000f7LO&quot;,
NOT ISBLANK(Numero_de_telefono_celular__c), 
OR( 
LEN( Numero_de_telefono_celular__c) &lt;&gt; 10, 
NOT ISNUMBER( Numero_de_telefono_celular__c ) 

))</errorConditionFormula>
        <errorDisplayField>Numero_de_telefono_celular__c</errorDisplayField>
        <errorMessage>CL-005 El campo debe tener 10 caracteres sin espacios. No incluir guiones ni paréntesis.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL006_El_telefono_debe_tener_7_caracter</fullName>
        <active>true</active>
        <description>Valida que el número de teléfono fijo tenga no contenga menos de siete (7) dígitos.</description>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
$Profile.Id &lt;&gt; &quot;00eo00000013vGj&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000f7LO&quot;,

OR(
   LEN(Phone) = NULL,
   7 &lt; LEN(Phone)
  ))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>CL-006 El campo solo debe tener máximo 7 caracteres sin espacios. No incluir guiones ni paréntesis.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL007_Valida_caracteres_campo_barrio</fullName>
        <active>true</active>
        <description>Valida que en el campo Barrio solamente ingresen texto.</description>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
$Profile.Id &lt;&gt; &quot;00eo00000013vGj&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000f7LO&quot;,
NOT( REGEX( Barrio__c , &quot;^[a-zA-Z_áéíóúñ\\s]*$&quot;))
)</errorConditionFormula>
        <errorDisplayField>Barrio__c</errorDisplayField>
        <errorMessage>CL-007. Solamente es permitido ingresar texto.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL008_Valida_el_campo_prog_MI_CASA_YA</fullName>
        <active>true</active>
        <description>Valida que cuando el campo Aprobado con programa MI CASA YA sea igual a &quot;Si&quot; se diligencie el campo Código de familia.</description>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
 ISPICKVAL(   Aprobado_con_programa_MI_CASA_YA__c  ,&quot;Si&quot;),
 ISBLANK(  Codigo_Familia__c  )  
)</errorConditionFormula>
        <errorMessage>CL-008. Si el campo ¿Aprobado con programa MI CASA YA? es &quot; Si &quot; debe diligenciar el campo Código de familia.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL009_Valida_cantidad_de_caracter_de_CC</fullName>
        <active>true</active>
        <description>Valida que en el campo Número de documento no se ingresen ceros ni letras.</description>
        <errorConditionFormula>/*5 &gt;= LEN ( Numero_de_documento__c)*/
/*REGEX(, &quot;^0&quot;)*/
/*OR( 
  BEGINS(Numero_de_documento__c, &quot;0000000000&quot;),
  5 &gt;= LEN ( Numero_de_documento__c)
)*/
NOT(
OR(
ISBLANK(Numero_de_documento__c),
REGEX( Numero_de_documento__c, &quot;[^0][0-9]{5,10}&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Numero_de_documento__c</errorDisplayField>
        <errorMessage>CL-009. El número de documento no es válido.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL010_Valida_si_es_mayor_de_edad</fullName>
        <active>true</active>
        <description>Valida que en el campo Edad sea igual o mayor a 18.</description>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
$Profile.Id &lt;&gt; &quot;00eo00000013vGj&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000f7LO&quot;,
18&gt; Edad__c
)</errorConditionFormula>
        <errorMessage>CL-010. El cliente debe ser mayor de edad.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL011_No_modificar_campos_del_cliente</fullName>
        <active>false</active>
        <description>Después que se cree la cuenta, no se pueden modificar el celular, teléfono, correo electrónico, nombres y apellidos.</description>
        <errorConditionFormula>AND( 
$Profile.Id &lt;&gt; &quot;00eo0000000TUb7&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000Tr0P&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000TuFy&quot;,
$Profile.Id &lt;&gt; &quot;00eo00000016F80&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000Tr0K&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000g2vT&quot;,
$Profile.Id &lt;&gt; &quot;00e1N000000h1I9&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000TUaz&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000TzBZ&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000g0KU&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000f645&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000f7LO&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000f7LE&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000PswQ&quot;,

OR( 
ISCHANGED(FirstName), 
ISCHANGED(LastName), 
ISCHANGED(Numero_de_documento__c), 
ISCHANGED(Numero_de_telefono_celular__c), 
ISCHANGED(PersonEmail) 
) 
)</errorConditionFormula>
        <errorMessage>CL-011. No es permitido modificar los campos: Nombre, número de documento, Número de celular y correo electrónico. Debe solicitarle el cambio a su líder.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL012_Valida_el_propietario_de_la_cuenta</fullName>
        <active>true</active>
        <description>Valida que la cuenta del cliente solamente pueda ser modificada por el propietario de la cuenta.</description>
        <errorConditionFormula>OwnerId  &lt;&gt;  $User.Id &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000uvB5&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000Tr0P&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo00000016F80&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TUb7&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000fznJ&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000Tr0Z&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000f645&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo00000016F80&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TqzW&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TzBZ&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TuFy&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000001EIPn&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000Tr0Z&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TuFy&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000Tr0P&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000Tr0K&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000f7LE&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo00000013vGj&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000g2vT&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TqzW&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TUaz&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000PswQ&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00e1N000000h1I9&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00e1N000000cUsO&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000f7LO&quot;</errorConditionFormula>
        <errorMessage>CL-012.La cuenta del cliente solamente puede ser modificada por el propietario de la cuenta o por los líderes de área.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL013_Valida_direccion_de_residencia</fullName>
        <active>true</active>
        <description>Valida que no se introduzcan caracteres no autorizados en el campo dirección de residencia.</description>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
$Profile.Id &lt;&gt; &quot;00eo00000013vGj&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000f7LO&quot;,

OR(

( CONTAINS( Direccion_de_residencia__c , &quot;°&quot;)) ,
( CONTAINS( Direccion_de_residencia__c , &quot;ª&quot;)) ,
( CONTAINS( Direccion_de_residencia__c , &quot;_&quot;)) ,
( CONTAINS( Direccion_de_residencia__c , &quot;¬&quot;)) ,
( CONTAINS( Direccion_de_residencia__c , &quot;´&quot;)) ,
( CONTAINS( Direccion_de_residencia__c , &quot;|&quot;)) ,
( CONTAINS( Direccion_de_residencia__c , &quot;~&quot;)) ,
( CONTAINS( Direccion_de_residencia__c , &quot;`&quot;))

))</errorConditionFormula>
        <errorDisplayField>Direccion_de_residencia__c</errorDisplayField>
        <errorMessage>CL-013. Hay caracteres no permitidos en este campo. Solamente se pueden ingresar el símbolo numeral (#), guión al medio (-).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL014_Valida_Ciudad_de_residencia</fullName>
        <active>true</active>
        <description>Valida en el campo Ciudad de residencia solamente se ingrese texto.</description>
        <errorConditionFormula>AND(
NOT ISBLANK(Ciudad_de_residencia__c),
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
$Profile.Id &lt;&gt; &quot;00eo00000016F80&quot;,
$Profile.Id &lt;&gt; &quot;00eo00000013vGj&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000f7LO&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000Tr0P&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000TuFy&quot;,

OR(
NOT( REGEX( Ciudad_de_residencia__c , &quot;^[a-zA-Z_áéíóú\\s]*$&quot;))
))</errorConditionFormula>
        <errorDisplayField>Ciudad_de_residencia__c</errorDisplayField>
        <errorMessage>CL-014. Este campo es solamente texto. No ingresar puntos, guiones o paréntesis.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL015_Valida_correspondencia_fisico</fullName>
        <active>true</active>
        <description>Valida que cuando el tipo de correspondencia sea físico, deben diligenciar los campos Departamento, ciudad, barrio y dirección de residencia.</description>
        <errorConditionFormula>AND( 
ISPICKVAL( Correspondencia__c, &quot;Físico&quot; ) , 
 $Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
$Profile.Id &lt;&gt; &quot;00eo00000013vGj&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000f7LO&quot;,

OR( 
ISBLANK(Barrio__c ), 
ISBLANK(Direccion_de_residencia__c), 
ISBLANK(TEXT(Departamento_actualizacion_datos__c)), 
ISBLANK(TEXT(Ciudad_actualizacion_datos__c )) 

))</errorConditionFormula>
        <errorMessage>CL-015. Si la entrega de la correspondencia se realiza en físico debe diligenciar los campos: Departamento , Ciudad, Barrio y Dirección de residencia.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL016_Valida_correspondencia_fisico_corr</fullName>
        <active>true</active>
        <description>Valida que cuando el tipo de correspondencia sea físico/correo se diligencien los campos Correo electrónico, Departamento , Ciudad, Barrio y Dirección de residencia.</description>
        <errorConditionFormula>AND( 
ISPICKVAL( Correspondencia__c, &quot;Físico/Correo&quot; ) ,
 $Profile.Id &lt;&gt; &quot;00eo0000000TUb7&quot;,
 $Profile.Id &lt;&gt; &quot;00eo0000000fznJ&quot;,
 $Profile.Id &lt;&gt; &quot;00eo0000000PswQ&quot;,
 $Profile.Id &lt;&gt; &quot;00eo0000000TUaz&quot;,
 $Profile.Id &lt;&gt; &quot;00eo0000000g2vT&quot;,
 $Profile.Id &lt;&gt; &quot;00eo0000000TUb5&quot;,
 $Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
 $Profile.Id &lt;&gt; &quot;00eo00000013vGj&quot;,
 $Profile.Id &lt;&gt; &quot;00eo0000000f7LO&quot;,

OR( 
ISBLANK( PersonEmail), 
ISBLANK(Barrio__c ), 
ISBLANK(Direccion_de_residencia__c), 
ISBLANK(TEXT(Departamento_actualizacion_datos__c)), 
ISBLANK(TEXT(Ciudad_actualizacion_datos__c )) 

))</errorConditionFormula>
        <errorMessage>CL-016. Si la entrega de la correspondencia se realiza en físico debe diligenciar los campos: Correo electrónico, Departamento , Ciudad, Barrio y Dirección de residencia.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL017_Valida_la_fecha_de_expedicion</fullName>
        <active>true</active>
        <description>Valida que la fecha de expedición del documento no sea menor a 18 años.</description>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
$Profile.Id &lt;&gt; &quot;00eo00000013vGj&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000f7LO&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000Tr0P&quot;,
((Fecha_de_expedicion_cc__c - Fecha_de_nacimiento__c)/365.22) &lt; 18
)</errorConditionFormula>
        <errorDisplayField>Fecha_de_expedicion_cc__c</errorDisplayField>
        <errorMessage>CL-017. El documento no pudo ser expedido antes de los 18 años. Por favor corregir la fecha.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL018_Puntos_comas_guiones_y_numeros</fullName>
        <active>true</active>
        <description>Valida que en los campos lugar de expedición y lugar de nacimiento se ingrese solamente texto, no permite ingresar caracteres numéricos y comas. La longitud debe ser mayor a 3 caracteres</description>
        <errorConditionFormula>AND(
NOT ISBLANK(Lugar_de_expedicion__c),
$Profile.Id &lt;&gt; &quot;00eo00000016F80&quot;, 

$Profile.Id &lt;&gt; &quot;00eo0000000TuFy&quot;, 
$Profile.Id &lt;&gt; &quot;00eo0000000Tr0P&quot;, 
$Profile.Id &lt;&gt; &quot;00eo0000000f7LE&quot;, 
$Profile.Id &lt;&gt; &quot;00eo0000000f7LO&quot;,
$Profile.Id &lt;&gt; &quot;00eo00000013vGj&quot;, 
OR(
NOT(REGEX( Lugar_de_expedicion__c , &quot;^[A-Z a-zÑñáéíóúÁÉÍÓÚ.-üÜ]+$&quot;)),
NOT(REGEX( Lugar_de_nacimiento__c , &quot;^[A-Z a-zÑñáéíóúÁÉÍÓÚ.-üÜ]+$&quot;)),
NOT(REGEX( Ciudad_de_residencia__c , &quot;^[A-Z a-zÑñáéíóúÁÉÍÓÚ.-üÜ]+$&quot;)),
LEN(Lugar_de_nacimiento__c) &lt; 3,
LEN(Lugar_de_expedicion__c) &lt; 3,
LEN(Ciudad_de_residencia__c) &lt; 3  
))</errorConditionFormula>
        <errorMessage>CL-018. No están permitidos los números y tildes invertidas en los siguientes campos:
Lugar de expedición, Lugar de nacimiento, Ciudad de residencia</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL018_Valida_el_lugar_de_expedicion</fullName>
        <active>true</active>
        <description>Valida que en el campo lugar de expedición se ingrese solamente texto, no permite ingresar caracteres numéricos, ni menos de tres caracteres.</description>
        <errorConditionFormula>AND(
NOT ISBLANK(Lugar_de_expedicion__c),
$Profile.Id &lt;&gt; &quot;00eo00000016F80&quot;, 
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;, 
$Profile.Id &lt;&gt; &quot;00eo0000000TuFy&quot;, 
$Profile.Id &lt;&gt; &quot;00eo0000000Tr0P&quot;, 
$Profile.Id &lt;&gt; &quot;00eo0000000f7LE&quot;, 
$Profile.Id &lt;&gt; &quot;00eo0000000f7LO&quot;,
$Profile.Id &lt;&gt; &quot;00eo00000013vGj&quot;, 
OR(
NOT( REGEX( Lugar_de_expedicion__c , &quot;^[a-zA-Z_áéíóúñ\\s]*$&quot;)),
LEN(Lugar_de_expedicion__c) &lt; 3 
))</errorConditionFormula>
        <errorDisplayField>Lugar_de_expedicion__c</errorDisplayField>
        <errorMessage>CL-018. Este campo es solo texto. No incluir puntos, guiones, ni comas.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL018_Valida_expedicion_nacimiento</fullName>
        <active>true</active>
        <description>Valida que en los campos lugar de expedición y lugar de nacimiento se ingrese solamente texto, no permite ingresar caracteres numéricos, puntos, comas, guiones. La longitud debe ser mayor a 3 caracteres</description>
        <errorConditionFormula>AND(
NOT ISBLANK(Lugar_de_expedicion__c),
$Profile.Id &lt;&gt; &quot;00eo00000016F80&quot;, 

$Profile.Id &lt;&gt; &quot;00eo0000000TuFy&quot;, 
$Profile.Id &lt;&gt; &quot;00eo0000000Tr0P&quot;, 
$Profile.Id &lt;&gt; &quot;00eo0000000f7LE&quot;, 
$Profile.Id &lt;&gt; &quot;00eo0000000f7LO&quot;,
$Profile.Id &lt;&gt; &quot;00eo00000013vGj&quot;, 
OR(
NOT(REGEX( Lugar_de_expedicion__c , &quot;^[A-Z a-zÑñáéíóúÁÉÍÓÚ]+$&quot;)),
NOT(REGEX( Lugar_de_nacimiento__c , &quot;^[A-Z a-zÑñáéíóúÁÉÍÓÚ]+$&quot;)),
LEN(Lugar_de_nacimiento__c) &lt; 3,
LEN(Lugar_de_expedicion__c) &lt; 3 
))</errorConditionFormula>
        <errorMessage>CL-018. No están permitidos los números, puntos, guiones en los siguientes campos:
Lugar de expedición
Lugar de nacimiento</errorMessage>
    </validationRules>
</CustomObject>